Se agrega la vista de Pasarela de pagos, la vista de Registro y el scaffold de la base de datos junto con su configuracion en el program y el appsettings.json

--- a/TravelingColombia/appsettings.json
+++ b/TravelingColombia/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionDefault":"Server=DESKTOP-7CO8I4C\\SQLEXPRESS;Database=TRAVELING_COLOMBIABD;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
