cambio de botones

--- a/TravelingColombia/appsettings.json
+++ b/TravelingColombia/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionDefault":"Server=DESKTOP-7CO8I4C\\SQLEXPRESS;Database=TRAVELING_COLOMBIABD;Trusted_Connection=True;TrustServerCertificate=True;"
+    "ConnectionDefault":"Server=DESKTOP-C6POTFC\\SQLEXPRESS;Database=TRAVELING_COLOMBIABD;Trusted_Connection=True;TrustServerCertificate=True;"
 
   }
 }
